<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.lulli</groupId>
  <artifactId>shape-data</artifactId>
  <version>0.0.1</version>
  <description>A MetaDataAccessObject library</description>
  <!-- homepage for the project -->
  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>
  <repositories>
    <repository>
      <id>code.lulli.net</id>
      <url>https://code.lulli.net/maven</url>
    </repository>
  </repositories>
  <!-- for distribution of artifact into the repo -->
  <!-- ****************************************** -->
  <build>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ssh</artifactId>
        <version>2.8</version>
      </extension>
    </extensions>
  </build>
  <distributionManagement>
    <repository>
      <id>${repository.id}</id>
      <name>${repository.name}</name>
      <url>${repository.url}</url>
    </repository>
    <site>
      <id>${repository.id}</id>
      <name>${repository.name}</name>
      <url>${repository.site.url}</url>
    </site>
  </distributionManagement>
  <!-- ****************************************** -->
  <dependencies>
    <dependency>
      <groupId>net.lulli</groupId>
      <artifactId>shape-data-api</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>3.15.1</version>
      <scope>test</scope>
    </dependency>
    
    <!-- CASSANDRA -->
    <dependency>
      <groupId>com.datastax.cassandra</groupId>
      <artifactId>cassandra-driver-core</artifactId>
      <version>4.0.0</version>
    </dependency>
  </dependencies>
</project>
